--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Drools 中文文档</title>
+<title>Drools . 中文文档</title>
 <meta http-equiv="refresh" content="0; URL=/drools-examples/content">
 <meta name="keywords" content="automatic redirection">
 </head>
